2005-01-15  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Enabled offline sync
	check box for Exchange provider in exchange_conf_entries[].

	* calendar/e-cal-backend-exchange.c (open_calendar):
	Handling offline_sync esource property.

	* storage/exchange-account.c: (exchange_account_new): Reading 
	and storing offline sync. and password expiry warning period value set.
	(finalize): Freeing offline sync variable.
	(find_passwd_exp_period): Using the password expiry warning period
	value set instead of default value.

2005-01-12  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Added private function
	to validate user credentials.

2005-01-10  Not Zed  <NotZed@Ximian.com>

	* mail/mail-stub.c (mail_stub_read_args): long/int ->uint32.
	(mail_stub_return_data): "

	* camel/camel-stub.c (stub_send_internal): uint32 should be a
	uint32, not a long.
	(stub_send_internal): same for uint32array and int

2004-12-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-journal.c : Added a new file for handling
	offline journaling. Implemented the class members.
	* camel/camel-exchange-journal.h : Similar
	* camel/camel-exchange-folder.c (append_message): Handle offline
	message appending
	(transfer_messages_to): Handle offline copying/moving of messages
	(camel_exchange_folder_construct): Create the journal entry file.
	* camel/camel-exchange-folder.h : Include journal object.
	* camel/Makefile.am : Included camel-exchange-journal.[ch]

2005-01-10  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-exchange-folder.c (exchange_sync): Implemented.
	(exchange_sync_online): Removed.
	(exchange_expunge_uids_online): Removed.
	(exchange_cache_message): Removed.

	* camel/camel-exchange-store.c (exchange_connect_online): Removed.
	(exchange_connect_offline): Removed.
	(exchange_disconnect_online): Removed.
	(exchange_disconnect_offline): Removed.
	(exchange_get_folder_online): Removed.