@@ -1,3 +1,8 @@
+2005-01-16  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* calendar/e-cal-backend-exchange-calendar.c (modify_object_with_href):
+	Fixed a memory leak causing a crash on modifying an appointment.
+
 2005-01-15  Sushma Rai  <rsushma@novell.com>
 
 	* camel/camel-exchange-provider.c: Enabled offline sync
@@ -26,7 +31,7 @@
 	uint32, not a long.
 	(stub_send_internal): same for uint32array and int
 
-2004-12-21  Sarfraaz Ahmed <asarfraaz@novell.com>
+2005-01-10  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* camel/camel-exchange-journal.c : Added a new file for handling
 	offline journaling. Implemented the class members.
